--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="manifest" href="lessonsApp.webmanifest" crossorigin="use-credentials">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <script>
-   /* if ('serviceWorker' in navigator) {
+   if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js');
-    };*/
+    };
   </script>
 </head>
 
