--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./dist/css/bootstrap.min.css">
   <link rel="manifest" href="lessonsApp.webmanifest" crossorigin="use-credentials">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script>
    if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js');
@@ -26,6 +27,7 @@
       </div>
       <div class="col-9 mx-auto h-25 container-2">
         <h6 class="text-white text-center welcome">Welcome To</h6>
+        <h5 class="text-danger text-center org">GRO ACADEMY</h5>
       </div>
   
     <!--div class="card" v-for="(lesson, index) in lessons">
