--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Coursework 3</title>
   <link rel="stylesheet" href="style.css">
   <script src="lessons.js"></script>
-  <link rel="stylesheet" href="./dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="dist/css/bootstrap.min.css">
   <link rel="manifest" href="lessonsApp.webmanifest" crossorigin="use-credentials">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
