--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 
 <body>
   <div id="lessons" class="pt-4">
-      <div class="col-9 mx-auto h-75 container-1">  
-      </div>
+      <div class="fader"></div>
       <div class="col-9 mx-auto h-25 container-2">
         <h6 class="text-white text-center welcome">Welcome To</h6>
-        <h5 class="text-danger text-center org">GRO ACADEMY</h5>
+        <h5 class="text-danger text-center org text-wrap">GRO ACADEMY</h5>
       </div>
   </div>
 </body>
