--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="h-25 container-2">
         <h6 class="text-white text-center welcome">Welcome To</h6>
         <h5 class="text-danger text-center org text-nowrap">GRO ACADEMY</h5>
-        <div class="infopane">
+        <div class="infopane px-4">
           <p class="text-white">
             The one-stop digital solution with engaging learning resources, 
             lecture notes, mock tests, model answers, quizzes and video 
