--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div id="lessons" class="pt-4">
-      <div class="fader"></div>
+    <div class="h-75 w-100 mx-auto img-container"></div>
       <div class="h-25 container-2">
         <h6 class="text-white text-center welcome">Welcome To</h6>
         <h5 class="text-danger text-center org text-nowrap">GRO ACADEMY</h5>
