--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div id="lessons" class="pt-4">
       <div class="h-75 w-100 d-flex justify-content-center align-items-center img-container">
-        <img src="./img/bg.png" alt="" class="img-resize">
+        <img src="./img/bgedit.png" alt="" class="img-resize">
       </div>
       <div class="h-25 container-2">
         <h6 class="text-white text-center welcome">Welcome To</h6>
